<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#718CD1">
    <TextView
        android:id="@+id/firstText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title1"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        android:layout_gravity="center"
        android:layout_marginBottom="150dp"
        android:layout_marginEnd="90dp"
        />
    <TextView
        android:id="@+id/secondText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title2"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        android:layout_gravity="center"
        android:layout_marginBottom="150dp"
        android:layout_marginStart="15dp"
        />
    <TextView
        android:id="@+id/thirdText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title3"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        android:layout_gravity="center"
        android:layout_marginBottom="150dp"
        android:layout_marginStart="100dp"
        />
    <LinearLayout
        android:id="@+id/buttonPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:layout_marginBottom="220dp">

        <Button
            android:background="#000000"
            android:id="@+id/dollarBtn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/dollarBtn"
            android:textColor="#FFFFFF"/>

        <Button
            android:id="@+id/euroBtn"
            android:background="#FFFFFF"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/euroBtn"
            android:textColor="#000000"/>


    </LinearLayout>
</FrameLayout>